<?xml version="1.0"?>
<package format="3">
  <name>health_interfaces</name>
  <version>1.0.0</version>
  <description>Custom message and service interfaces for health monitor</description>
  <maintainer email="rohan.n.gupta718@gmail.com">Rohan Gupta</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>