<?xml version="1.0"?>
<package format="3">
  <name>health_monitor_cpp</name>
  <version>1.0.0</version>
  <description>Robot health monitor nodes</description>
  <maintainer email="rohan.n.gupta718@gmail.com">Rohan Gupta</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>health_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>